# latent-faults-slipgen

./: .gitignore  README.md  analyze_text_vec.py  create_text.ipynb  decoder.py  draft_memo.txt  extact_image.ipynb  extract_image.ipynb  frequency_domain_comparision_with_fourire_transform.ipynb  image_embedder.py  inference_pipeline.py  input_to_image_embedd.py  interactive_slip_app.py  latent_mapper.py  main.py  pipeline overview.pptx  pyproject.toml  requirements.txt  run_inference.py  scaler_x.pkl  scaler_x_1.0.pkl  select_features_and_create_dz_json.ipynb  slip_analysis_summary.csv  test_metrics.json  test_metrics_1.0.json  text_vec_analysis.npy  train_mapper_decoder.py  train_pipeline.py  train_vqvae.py  tune_mapper.py  tuning_pipeline.py
Dataset/: image_latents.pkl  isc-gem_README.txt  text_vec.npy  texts_cleaned.json
assets/: utils.py
embeddings/: image_latents.pkl  text_embeddings.npy  text_image_embed.ipynb
error_metrics/: s1944TONANK01ICHI_error_metrics.json  s1978MIYAGI01YAMA_error_metrics.json  s2005SUMATR01JIxx_error_metrics.json  s2007KURILI01SLAD_error_metrics.json  s2007PAGAII01HAYE_error_metrics.json  s2007TOCOPI01JIxx_error_metrics.json  s2009VANUAT01SLAD_error_metrics.json  s2010MAULEC01SLAD_error_metrics.json  s2011HONSHU01SHAO_error_metrics.json  s2011KERMAD03HAYE_error_metrics.json  s2011TOHOKU01LAYx_error_metrics.json  s2012SUMATR01HAYE_error_metrics.json  s2013SCOTIA02HAYE_error_metrics.json  s2016KAMCHA02HAYE_error_metrics.json  s2016SOLOMO01HAYE_error_metrics.json
error_metrics_1.0/: s1944TONANK01ICHI_error_metrics.json  (+14 more)
(+133 files in other folders)
